discussion/kv_engine/144660/144660_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

toybuild: override bg fetch time

Change-Id: I8687b322dbc71cc6e513aeb26c5ddcca49ba5f59

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Sarath Lakshman
Date: 2021-01-28 20:07:13.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-01-28 20:34:07.000000000
Message: 
Patch Set 1: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/6804/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:868:68: error: variable "start" cannot be implicitly captured in a lambda with no capture-default specified [clang-diagnostic-error]
                                std::chrono::steady_clock::now() - start));
                                                                   ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:836:10: note: "start" declared here
    auto start = std::chrono::steady_clock::now();
         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:837:15: note: lambda expression begins here
    auto cb = [this, &vbid](bool found,
              ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/6804/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:868:68:
error: variable "start" cannot be implicitly captured in a lambda with no capture-default specified [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/6804/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/33242/ : FAILURE

Compile error at ..\kv_engine\engines\ep\src\magma-kvstore\magma-kvstore.cc(868): error C3493: "start" cannot be implicitly captured because no default capture mode has been specified ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/33242/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/28601/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:868:68:
error: variable "start" cannot be implicitly captured in a lambda with no capture-default specified
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/28601/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/7426/ : FAILURE

Compile error at [2021-01-28T20:11:15.683Z] ../kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:868:68:
error: variable "start" cannot be implicitly captured in a lambda with no capture-default specified
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/7426/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/8468/ : FAILURE

Compile error at [2021-01-28T20:22:03.441Z] ../kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:868:68:
error: ?start? is not captured
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/8468/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/8725/ : FAILURE

Compile error at [2021-01-28T20:19:03.448Z] ../kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:868:68:
error: variable "start" cannot be implicitly captured in a lambda with no capture-default specified
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/8725/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/16274/ : FAILURE

Compile error at [2021-01-28T20:12:06.250Z] ../kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:868:68:
error: variable "start" cannot be implicitly captured in a lambda with no capture-default specified
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/16274/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/5340/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/8342/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
